--- a/index.html
+++ b/index.html
@@ -9,28 +9,31 @@
     <link rel="stylesheet" href="./styles/titulo.css">
     <link rel="stylesheet" href="./styles/linguagens.css">
     <link rel="stylesheet" href="./styles/pesquisa.css">
+    <link rel="stylesheet" href="./styles/index.css">
     
     <script defer src="./scripts/script.js"></script>
     <title>Menu Responsivo</title>
 </head>
 <body>
-    <header>
-        <div class="titulo">
-            <img src="./img/Tech Blog.svg" alt="">
-            <img id="menu" src="./img/menu.svg" alt="">
+    <header class="navegacao ">
+        <div class="opcoes margem">
+            <div class="titulo">
+                <img src="./img/Tech Blog.svg" alt="">
+                <img id="menu" src="./img/menu.svg" alt="">
+            </div>
+            <ul class="linguagens aparecer_menu">
+                <li>All</li>
+                <li>CSS</li>
+                <li>Javascript</li>
+                <li>Python</li>
+                <li>Java</li>
+            </ul>
         </div>
-        <ul class="linguagens">
-            <li>All</li>
-            <li>CSS</li>
-            <li>Javascript</li>
-            <li>Python</li>
-            <li>Java</li>
-        </ul>
-        <div class="pesquisa">
-            <input placeholder="pesquisar por" type="text">
+        <div class="pesquisa margem aparecer_menu ">
+            <input placeholder="Pesquisar por" type="text">
             <div class="perfil">
-                <img src="./img/profile.svg" alt="img_perfil">
-                <h4>Samuel Leão</h4>
+                <img src="./img/imagem-de-perfil-pessoal.png" alt="img_perfil">
+                <h4>Joana</h4>
             </div>
         </div>
 
